--- a/html/index.html
+++ b/html/index.html
@@ -2,19 +2,21 @@
 <head>
     <title>web server demo</title>
     <script>
-        function loadBill(){
-            fetch('/bill').then(r=>r.json().then(bill => {
-                console.log(bill);
-                const location = document.querySelector('#billLocation');
-                location.innerHTML += "amount: $"+bill.amount + "<br>";
-                location.innerHTML += "payment method: " + bill.paymentMethod + "<br>";
-                location.innerHTML += "payment time: " + (new Date(bill.time*1000)).toLocaleString();
+        function loadReciept(){
+            fetch('/reciept').then(r=>r.json().then(reciept => {
+                console.log(reciept);
+                const location = document.querySelector('#recieptLocation');
+                const recieptP = document.createElement('p');
+                recieptP.innerHTML += "amount: $"+reciept.amount + "<br>";
+                recieptP.innerHTML += "payment method: " + reciept.paymentMethod + "<br>";
+                recieptP.innerHTML += "payment time: " + (new Date(reciept.time*1000)).toLocaleString();
+                location.appendChild(recieptP);
             }))
         }
     </script>
 </head>
 <body>
-    <button onclick="loadBill();">clicky clicky</button>
-    <div id="billLocation"></div>
+    <button onclick="loadReciept();">load sample reciept</button>
+    <div id="recieptLocation"></div>
 </body>
 </html>
